# POPCORNBENCH-clean

./: .gitignore  all_results.csv  analysis.py  delta_rule_ext_v4d.1.sm_90.cubin  h100_int8_wmma_dis.1.sm_90.cubin  label_fixes.jsonl  missing_fields.txt  pyproject.toml  report.aux  report.out  report.toc  tmp1zva1ym5.json  trace_analysis.csv
KernelBench/: POPCORN_BASELINE_KERNEL_REFS_VERIFIED.md
configs/: pop3.toml  popcorn2_bench_slate_v1.toml  sweep.example.toml  sweep.grok.toml  sweep.l1234_popcorn2.toml  sweep.l1234_popcorn2_all.toml  sweep.l1234_popcorn2_bench_all.toml  sweep.l1234_popcorn2_bench_default.toml  sweep.l1234_popcorn2_bench_st.toml  sweep.l1234_popcorn2_default.toml  sweep.l1234_popcorn2_single_turn.toml  sweep.l1234_popcorn_all.toml  sweep.l1234_popcorn_default.toml  sweep.l1234_popcorn_single_turn.toml  sweep.l123_single_gpt.toml  sweep.l12_all_gpt copy.toml  sweep.l34_all.toml  sweep.l3_default_gpt.toml  sweep.l5_hw_translation.toml  sweep.l5_hw_translation_8xh100.toml  sweep.l5_hw_translation_8xh100_all.toml  sweep.l5_hw_translation_8xh100_default.toml  sweep.l5_hw_translation_8xh100_single_turn.toml  sweep.l5_hw_translation_all.toml  sweep.l5_hw_translation_default.toml  sweep.l5_hw_translation_single_turn.toml  sweep.popcorn2_l2_all.toml  sweep.popcorn2_l2_st.toml  sweep.popcorn2_l3_st.toml  sweep.rerun_errors.toml  sweep.rerun_errors_l3_all_gpt.toml  sweep.rerun_errors_original.toml  sweep.rerun_errors_popcorn.toml
docs/: hardware_translation_level5.md
scripts/: SWEEP.md  _blog_page.html  _docs_page.html  _profile_worker_torchrun.py  (+29 more)
(+1137 files in other folders)
