[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# this should be our single source of truth for versioning

[project]
name = "popcornbench"
version = "0.2.0.dev0"
requires-python = "==3.10.*"
dependencies = [
    # Frameworks
    "torch>=2.9.0",
    "transformers",
    "datasets>=2.19.0",
    "modal",
    # helper
    "tqdm",
    "packaging",
    "setuptools",
    "pydra-config",
    "ninja",
    "tomli",
    "tabulate",
    # Numerics
    "einops",
    "python-dotenv",
    "numpy",
    # LLM providers
    "openai",
    "litellm[proxy]",
    "gpn",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.8",
]

[project.optional-dependencies]
gpu = [
    # GPU-specific dependencies (requires CUDA)
    "triton",
    "nvidia-cutlass-dsl",
    "tilelang",
    "cupy-cuda12x",
    "nsight-python",
]
dev = [
    "pytest",
    "ruff",
]

[tool.uv]
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["kernelbench*"]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cuda", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
gpn = { git = "https://github.com/songlab-cal/gpn.git" }

[tool.setuptools.package-data]
kernelbench = ["prompts/**/*"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]

